# mpg123

./: meson.build  meson_options.txt
man1/: meson.build
meson/: makedef.py
src/: meson.build  net123_winhttp.c  net123_wininet.c  resolver.c  win32_support.c
src/common/: meson.build
src/compat/: meson.build
src/include/: meson.build  syn123.h
src/libmpg123/: lfs_wrap.c  libmpg123.c  meson.build  parse.c
src/libout123/: meson.build  stringlists.c
src/libout123/modules/: meson.build
src/libsyn123/: meson.build
